--- a/lab/index 2.html
+++ b/lab/index 2.html
@@ -521,7 +521,7 @@
         <td> <table style='border: 0px'><tr><th>Theyanesh Jayaprakash</th></tr>
         <tr><td><a href="https://www.linkedin.com/in/theyaneshj17" target="_blank">Theyanesh Jayaprakash</a> is pursuing a master’s degree in Data Science at Indiana University Bloomington. Previously, he worked as a Senior Software Engineer at Optum, part of UnitedHealth Group, where he gained extensive experience in healthcare data analytics—focusing on data modeling, ETL processes, data warehousing, and visualization to support business-specific client reporting. As a research assistant, he is developing deep learning models to study Alzheimer’s disease, specifically analyzing atrophy patterns and disease progression. He aspires to contribute to mental health research and early cancer detection through sentiment analysis, emotion recognition, and anomaly detection. </td></tr>
          <tr><td>
-        He received 2025 AAIC conference fellowship award. 
+        He received 2025 AAIC conference fellowship award. Check out his poster at AAIC 2025,  <a href="the_poster.pdf" target="_blank">Deep Learning Framework for Characterizing Tau-PET Heterogeneity and Exploring Functional Connectivity in Alzheimer’s Disease: A Self-supervised Approach</a>.
          </table></td>
          <td style='text-align: right'><img src="../images/Theyaneshwaran.jpg" style='height: 200px'></td>
     </tr>
@@ -529,7 +529,7 @@
         <td> <table style='border: 0px'><tr><th>Connor Cornelison</th></tr>
         <tr><td><a href="https://www.linkedin.com/in/connor-cornelison-2a36422b2/" target="_blank">Connor Cornelison</a> is a second-year M.S. student in Data Science at Indiana University Bloomington, holding a B.S. in Computer Science from Indiana University South Bend. He is currently researching sex-specific imaging biomarkers for Alzheimer’s disease, using the ABC model. He plans to pursue a career in scientific computing, with a focus on AI-powered data processing.
         <tr><td>
-        He received <a href="https://medicine.iu.edu/research-centers/computational-biology-bioinformatics/education/genomics-research-training" target="_blank">INGEN4DS fellowship</a>. 
+        He received <a href="https://medicine.iu.edu/research-centers/computational-biology-bioinformatics/education/genomics-research-training" target="_blank">INGEN4DS fellowship</a>. Check out his poster at AAIC 2025, <a href="connor_AAICPoster.pdf" target="_blank">Sex differences in structural connectivity-based AD pathology in the Indiana Memory and Aging cohort</a>. 
          </td></tr>
          </table></td>
          <td style='text-align: right'><img src="../images/connor.jpg" style='height: 200px'></td>
